# arkangle

./: README.md  pyproject.toml
project/: settings.py
search/: admin.py  documents.py  models.py  serializers.py  urls.py  views.py
search/management/commands/: createdata.py
search/migrations/: 0001_initial.py
search/templates/: home.html
